infra/k8s/tickets-deplo.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: tickets-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec: 
      containers:
        - name: tickets
          image: tomaskvasnica/tickets
---
apiVersion: v1
kind: Service
metadata: 
  name: tickets-svc
spec:
  selector:
    app: tickets
  ports:
    - name: ticketsport
      protocol: TCP
      port: 4000
      targetPort: 4000
