infra/k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.com
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-svc
              servicePort: 4000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-svc
              servicePort: 4000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-svc
              servicePort: 4000
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-svc
              servicePort: 4000
          - path: /?(.*)
            backend:
              serviceName: client-svc
              servicePort: 3000
    # - host: ticketing.dev
    #   http:
    #     paths:
    #       - path: /api/users/?(.*)
    #         backend:
    #           serviceName: auth-svc
    #           servicePort: 4000
    #       - path: /*
    #         backend:
    #           serviceName: auth-svc
    #           servicePort: 4000
